8244491: make runtime/cds/appcds/TestZGCWithCDS.java test more robust
Reviewed-by: dholmes